# UpSPA_extension

./: .gitignore  README.md  apply_patch_b.sh  docker-compose.oracle.yml  package-lock.json  package.json  reset_demo.sh  start_demo.sh
crates/upspa-cli/: Cargo.toml
crates/upspa-cli/src/: main.rs
crates/upspa-core/: Cargo.toml
crates/upspa-core/src/: aead.rs  hash.rs  lib.rs  sign.rs  toprf.rs  types.rs
crates/upspa-core/src/protocol/: authenticate.rs  mod.rs  password_update.rs  register.rs  secret_update.rs  setup.rs
crates/upspa-core/tests/: integration_flows.rs  vector_toprf.rs  vectors_aead.rs  vectors_setup.rs
crates/upspa-wasm/: Cargo.toml
crates/upspa-wasm/src/: lib.rs
demo/light-login-server/: server.mjs
docker/oracle/: login-server.Dockerfile  sp.Dockerfile
docs/: CANDIDATE_SITES_200.md  ORACLE_DEMO_DEPLOYMENT.md  POLICY_STRATEGY_FINAL_REPORT.md  Sina_UpSPA_extension_tasks_2_5_report.md  Sina_browser_compatibility_report.md  build-process.md  content-script-flow.md  dist-generation.md  efe-extension-tasks-3-6.md  emirhan-extension-tasks-1-4.md  emirhan-universal-autofill-architecture.md  folder-structure.md  furkan-extension-report.md  furkan-extension-tasks-1-6.md  import-process.md  message-passing-flow.md  popup-flow.md  service-worker-flow.md
scripts/: build_wasm.sh
scripts/oracle/: init_postgres.sql  install_vm_dependencies.sh  open_ports_ufw.sh  smoke_test.sh
services/storage-provider-go/: Dockerfile  go.mod  go.sum
services/storage-provider-go/INTERN_NOTES/: sina-week2.md  sina-week3.md
services/storage-provider-go/cmd/sp/: main.go
tools/hooks/: gaurd.sh
(+45 files in other folders)
