[package]
name = "upspa-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI utility for exercising the UpSPA client-side flows"
[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
rand_core = "0.6"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
upspa-core = { path = "../upspa-core" }
