[package]
name = "upspa-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for UpSPA client-side protocol"
[lib]
crate-type = ["cdylib", "rlib"]
[features]
panic_hook = ["console_error_panic_hook"]
[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
upspa-core = { path = "../upspa-core" }
